--- a/Site web/English/Members.html
+++ b/Site web/English/Members.html
@@ -45,78 +45,128 @@
         </header>
     </div>
 
-    <div id="contenu">
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-    </div>
+    <div id="contenu-membres">
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> Karine Huot
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 4
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 7
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 10
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 2
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 5
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 8
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 11
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 3
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 6
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 9
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+            </div>
+            <h2> case 12
+            </h2>
+            <p>
+
+            </p>
+        </div>
+
 
 </body>
 
