--- a/Site web/English/Members.html
+++ b/Site web/English/Members.html
@@ -48,7 +48,7 @@
     <div id="contenu-membres">
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> Karine Huot
             </h2>
@@ -58,7 +58,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 4
             </h2>
@@ -68,7 +68,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 7
             </h2>
@@ -78,7 +78,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 10
             </h2>
@@ -88,7 +88,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 2
             </h2>
@@ -98,7 +98,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 5
             </h2>
@@ -108,7 +108,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 8
             </h2>
@@ -118,7 +118,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 11
             </h2>
@@ -128,7 +128,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 3
             </h2>
@@ -138,7 +138,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 6
             </h2>
@@ -148,7 +148,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 9
             </h2>
@@ -158,7 +158,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 12
             </h2>
