--- a/Site web/Français/Le robot.html
+++ b/Site web/Français/Le robot.html
@@ -67,10 +67,13 @@
                 <div class="content">
                     <h2>Semaine 2</h2>
                     <dl>
-                        <dl>
-                            <dt>Début des prototypes</dt>
-                            <dd>Dessins de croquis</dd>
-                        </dl>
+
+                        <dt>Début des prototypes</dt>
+                        <dd>Dessins de croquis</dd>
+                        <dd>Construction d'une base amovible</dd>
+                        <dd>Électronique de base</dd>
+                        <dd>Début de la construction du tube pressoir à champignon</dd>
+
                     </dl>
                 </div>
             </div>
