--- a/Site web/Français/Souvenirs.html
+++ b/Site web/Français/Souvenirs.html
@@ -45,77 +45,12 @@
         </header>
     </div>
 
-    <div id="contenu">
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
+    <div id="contenu-souvenirs">
+        <!-- toujours mettre images de la meme dimentions-->
+        <img src="../images/image temporaire.png" alt="test">
+        <!--<img src="../images/journal test.jpg" alt="test">-->
+        <img src="../images/image temporaire.png" alt="test">
+        <img src="../images/image temporaire.png" alt="test">
     </div>
 
 </body>
